# ChangeLog for net-mail/fetchmail
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/fetchmail/ChangeLog,v 1.173 2009/09/27 15:12:16 nixnut Exp $

  27 Sep 2009; nixnut <nixnut@gentoo.org> fetchmail-6.3.11-r1.ebuild:
  ppc stable #282015

  05 Sep 2009; Brent Baude <ranger@gentoo.org> fetchmail-6.3.11-r1.ebuild:
  Marking fetchmail-6.3.11-r1 ppc64 for bug 282015

  01 Sep 2009; Jeroen Roovers <jer@gentoo.org> fetchmail-6.3.11-r1.ebuild:
  Stable for HPPA (bug #282015).

  29 Aug 2009; Raúl Porcel <armin76@gentoo.org> fetchmail-6.3.11-r1.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #282015

  23 Aug 2009; Torsten Veller <tove@gentoo.org> fetchmail-6.3.11-r1.ebuild:
  Add full path to python_mod_optimize.

  19 Aug 2009; Torsten Veller <tove@gentoo.org> -fetchmail-6.3.8-r1.ebuild,
  -files/fetchmail-6.3.8-null-msg-pointer.patch,
  -files/fetchmail-6.3.8-resize-buffer.patch, -fetchmail-6.3.9.ebuild,
  -fetchmail-6.3.9-r1.ebuild, -files/fetchmail:
  Cleanup

  19 Aug 2009; Torsten Veller <tove@gentoo.org> fetchmail-6.3.11-r1.ebuild:
  Stable on x86, amd64 (282015)

*fetchmail-6.3.11-r1 (15 Aug 2009)

  15 Aug 2009; Torsten Veller <tove@gentoo.org>
  +files/6.3.11-fix-free-corruption.patch, +fetchmail-6.3.11-r1.ebuild:
  Bump to fix segmentation fault (#280760)

  10 Aug 2009; Markus Meier <maekke@gentoo.org> fetchmail-6.3.11.ebuild:
  amd64 stable, bug #280537

  09 Aug 2009; Raúl Porcel <armin76@gentoo.org> fetchmail-6.3.11.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #280537

  09 Aug 2009; nixnut <nixnut@gentoo.org> fetchmail-6.3.11.ebuild:
  ppc stable #280537

  08 Aug 2009; Jeroen Roovers <jer@gentoo.org> fetchmail-6.3.11.ebuild:
  Stable for HPPA (bug #280537).

  08 Aug 2009; Brent Baude <ranger@gentoo.org> fetchmail-6.3.11.ebuild:
  Marking fetchmail-6.3.11 ppc64 for bug 280537

  06 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  fetchmail-6.3.11.ebuild: