@@ -7,6 +7,8 @@ AUX fetchmail-6.3.8-resize-buffer.patch 848 RMD160 4d51e00ccdc170870d58691727b43
 AUX fetchmail-prefix.patch 1127 RMD160 3566bc4ab70749034eb90c23f374bf7e95aab964 SHA1 02f989f7ca4f267c10c038a2f1725b833cbc9719 SHA256 37b579e7a18d28af79f44f558de1444d21e5cfe4cf5b5ed52622f93c8088781d
 AUX fetchmail.new 686 RMD160 d686776466385ec205dd704dbab999953cb9ee17 SHA1 660e9c766cbf4629a3e74ecd74ef56b5a1a299ce SHA256 5ef42ca61fcf0e60529e0be9c6bef4b61a9e34e7a82f766f046c8457bc9392b5
 DIST fetchmail-6.3.11.tar.bz2 1608923 RMD160 8d6b0e42b9ead6e836e40e8ae494a6f5b7d3a59b SHA1 e769bcb81b393a55e02ec4bf7e94a52cf0c8ef8f SHA256 ba679cef82b9520bc5dbe9e2e54381e488b5712faf885deb7612393b5ab80c6f
+DIST fetchmail-6.3.13.tar.bz2 1614718 RMD160 7468325f3b2b03a47175b3728393cc440d3a98e6 SHA1 930cf3aae54108572b1c695c75dd14cf865f5d16 SHA256 206a299f7ced9d7359621cc8e590a22f9cfc9c713696474e2119a1340c2e98ee
 EBUILD fetchmail-6.3.11-r1.ebuild 3147 RMD160 cdc202a36baa656bc378dbef39f65453f9118e43 SHA1 b0c2d30322c8c72327267556ef2ba32589baaa95 SHA256 06ee79cb15f45479c0fabe9c75cf83025dbb1bb6102bc05b65a6283ac8a48ede
-MISC ChangeLog 25334 RMD160 9ec9131648c1553d1ce8f7a7445386fbed96e691 SHA1 1a6f9e832dfd5fdda5026b659cb8165c4777e971 SHA256 7507bcb24b15339e59b0a656ef55d3bf8c01e5943101dea0e7bbdb3492ae1cdb
+EBUILD fetchmail-6.3.13.ebuild 2881 RMD160 af09792777daed8345b66c822d330884f70d5d8f SHA1 7680c01796773cd1a47e67c4f6c02a7b891a5ff0 SHA256 9210535a8252e5ad32358da71a085de933c449fe18eb954fef77d727f5527768
+MISC ChangeLog 25789 RMD160 71846bd46fab634749df86863e742cae10cfcde8 SHA1 7ba3bcbdeb99f3bb815bc0f72dbb96225042e25b SHA256 9057b30b73d5b51963c4176ff5636ad8814f862fb12beb9b275a64502529a635
 MISC metadata.xml 237 RMD160 c2a1a048559257005241ad0985c814bd6aab17a7 SHA1 d448f9b9c9f2a92d95efaf4cf9ce3b83b3f9ad3b SHA256 2ff40136507932f8146b07f93d8414eef1cba8bbed94c9eeccf42b6cbbebf7c3
